# meta_labeling_project

./: .gitignore  README.md  pyproject.toml
docs/: current_state_and_next_steps.md  drawn_conclusions.md
fundamental_analysis/fundamental_helpers/: helper1.py
fundamental_analysis/fundamental_notebooks/: fundamental0.ipynb  fundamental1.ipynb
fundamental_analysis/fundamental_tables/: fundamental0_dgp_vol_diagnostics.csv  fundamental0_dgp_vol_summary.csv  fundamental1_grid_results.csv  fundamental1_grid_summary.csv
notebooks/: fast_simulation.ipynb  fast_worflow.ipynb  horizon_sensitivity.ipynb  main_workflow.ipynb  split_secondary_testing.ipynb  tables.ipynb
src/: evaluation_metrics.py  horizon_sensitivity.py  ic_analysis.py  primary_strategy.py  secondary_model.py  secondary_model_fast.py  secondary_model_split_fast.py  triple_barrier.py  triple_barrier_fast.py  triple_barrier_lsymmetric.py
